# LogisticGPT-LLM-Adaptation

./: .gitignore  DataPrep_Index.ipynb  Dockerfile  GPTQ_Compress.ipynb  QGalore_Finetune.ipynb  QLoRA_Finetune.ipynb  RAG_Pipeline_Evaluation.ipynb  README.md  SyntheticDataset_Creator.ipynb  docker-compose.yml  gradio_app.py  init-db.sh  main.py  pyproject.toml  run.sh
app/: app.py  utils.py
app/pages/: business_rules.py  examples.py  knowledge_base.py  playground.py  settings.py  sql_instructions.py
data/annotate/: example_set.jsonl  test_set.jsonl  train_set.jsonl
descriptors/default/: t2sql_descriptor.json
documentation/: 00 Overall.md  01 Env Setup.md  02 Database setup.md  03 Descriptor.md  04 Evaluation Requirements.md  05 Annotate Query-SQL Dataset.md  06 Generation Pipeline.md  07 Evaluation Pipeline.md  Canonicalization Rules.md  Miscallenuous.md
evalx/: __init__.py  canonicalization.py  em.py  esm.py  etm.py  eval.py  eval_utils.py  normalization.py
extensions/: agent_measure.py  api.py
scripts/: diff_rows.py  etm_export.py  inspect_eval.py  make_etm_schema.py  run_generation.py  validate_gold_sql.py
t2sql/: agent.py  base.py  prompts.py  utils.py
t2sql/controller/: ingest_documentation.py  make_answer.py
t2sql/ingestors/: text_document_ingestor.py
t2sql/sql/: client.py
t2sql/types/: __init__.py
t2sql/vectordb/: base.py  chromadb copy.py  chromadb.py
