[tool.poetry]
name = "text2sql"
version = "0.1.0"
description = "Text to sql library"
authors = ["Kirill Kirikov <kk@datrics.ai>", "Tetyana Gladkych <th@datrics.ai>"]
license = "MIT"
packages = [
    { include = "t2sql" },
    { include = "app" }
]


[tool.poetry.dependencies]
python = "^3.11"

aiohttp = ">=3.11.6"
fastapi = ">=0.115.5"
numpy = ">=1.26.4"
pandas = ">=2.2.3"
uvicorn = ">=0.32.0"
sentence-transformers = ">=3.3.1"
streamlit = ">=1.40.1"
streamlit_monaco = ">=0.1.3"
chromadb = ">=0.5.18"
litellm = ">=1.52.16"
sshtunnel = ">=0.4.0" # TODO remove
SQLAlchemy = ">=2.0.35"
redshift_connector = ">=2.1.3"
snowflake-connector-python = ">=3.13.2"
asyncpg = ">=0.30.0"
asyncmy = ">=0.2.10"
aioodbc = ">=0.5.0"
pydantic = ">=2.10.6"
watchdog = ">=6.0.0"
greenlet = "^3.1.1"

[tool.poetry.group.lint.dependencies]
ruff = ">=0.1.15"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"